[package]
name = "calam"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to send file to clamd"
authors = ["Aran Varun <vir@tue.su>"]
homepage = "https://github.com/verbasu/calam"
repository = "https://github.com/verbasu/calam"
readme = "README.md"
license = "MIT"
keywords = ["clamav", "antivirus"]
categories = ["command-line-utilities"]
rust-version = "1.74.0"

[dependencies]
eyre = "0.6.11"
clap = { version = "4.4.13", features = ["derive"] }
color-eyre = "0.6.3"
thiserror = "1.0.56"
tokio = { version = "1.40.0", features = ["fs", "io-util", "net",
"rt-multi-thread", "sync", "macros"] }
pretty_env_logger = "0.5.0"
error-chain = "0.12.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
chrono = "0.4.38"
json = "0.12.4"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
