[package]
name = "calam"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
rust-version = "1.74.0"

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
tokio = { version = "1.40.0", features = ["fs", "io-util", "net", "rt-multi-thread", "sync", "macros"] }
error-chain = "0.12.4"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
chrono = "0.4.38"
tokio-util = { version = "0.7.12", features = ["codec"] }
serde_json = "1.0.128"

[dev-dependencies]
pretty_env_logger = "0.5.0"
thiserror = "1.0.56"
color-eyre = "0.6.3"
eyre = "0.6.11"
json = "0.12.4"
rumqttc = "0.24.0"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
